--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <div id="container">
     
   </div>
-  <script src="./scripts.js"></script>
+  <script src="./js/scripts.js"></script>
 </body>
 </html>
